src/styles/estate-sale-list.module.scss
@import './mixins.scss';


.estateSaleList {
  max-width: 1440px;
  margin: auto;
  padding: 20px 80px;
	background-color: black;
	color: white;

	display: flex;
	justify-content: flex-start;
	align-items: center;

	.detailedSliderWrapper {
		width: 60%;
		display: flex;
		justify-content: center;
		align-items: center;
	}

	.thumbnailSliderWrapper {
		width: 40%;
		text-align: center;

		.thumbnailSliderTitle {
			padding-bottom: 20px;
			width: 100%;
			white-space: nowrap;
		}

		.prevNextContainer {
			display: flex;
			justify-content: center;
			align-items: center;
			gap: 20px;

			button {
				color: black;
				background-color: lightgreen;
				padding: 10px 20px;
				border: none;
				border-radius: 8px;
				transition: all 0.3s ease-in-out;

				&:hover {
					transform: scale(1.05);
					box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
				}

				&:active {
					transform: scale(0.95);
					box-shadow: none;
				}
			}
		}
	}
}

.saleCard {
	margin: 20px auto;
	height: 600px;
	width: 400px;
	border-radius: 12px;
	box-shadow: 0 0 10px #ccc;
	display:flex;
	flex-direction: column;
	justify-content: flex-start;

	.content {
		padding: 10px;
		height: 40%;
		overflow: auto;
	}

	.imageSliderWrapper {
		display: flex;
		flex-direction: column;
		justify-content: flex-start;
		
		.saleImages {
			height: 100%;
			padding-top: 10px;
			
			.slick-list {
				height: 100%;
			}
			
			.saleImage {
				aspect-ratio: 16/9;
				object-fit: contain;
			}
		}
	}

	.sliderPagination {
		margin-left: auto;
		padding: 20px
	}

	.followSale {
		color: black;
		background-color: lightgreen;
		padding: 10px 20px;
		border: none;
		border-radius: 8px;
		transition: all 0.3s ease-in-out;
		width: 50%;
		margin: 0 auto 5px;

		&:hover {
			transform: scale(1.05);
			box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
		}

		&:active {
			transform: scale(0.95);
			box-shadow: none;
		}
	}

}

.thumbnailSale {
	white-space: nowrap;
	padding: 5px;
	text-align: center;
	border-radius: 5px;
	
	&.activeThumbnail {
		background-color: green;
	}
}

@include mobile() {
	.saleCard {
		width: 100%;
		height: 400px;
		padding: 10px;
		justify-content: space-between;

		.followSale {
			margin-top: 10px;
		}

		.sliderPagination {
			padding: 10px 20px;
		}
	}
	.estateSaleList {
		max-width: 100%;
		padding: 25px;
		flex-direction: column-reverse;
		justify-content: flex-end;
		gap: 40px;
		margin: 0 auto;
		position: fixed;
		right: 0;
		bottom: 0;
		left: 0;

		.content {
			height: unset;
		}

		.detailedSliderWrapper, .thumbnailSliderWrapper {
			width: 100%;
		}

		.detailedSliderWrapper {
			max-height: 50%;
		}
	}
}

